<resources>
    <string name="app_name">SuperKiwi</string>

    <!-- Activity Labels -->
    <string name="label_main">SuperKiwi</string>
    <string name="label_asb">ASB Mobile Tweaks</string>
    <string name="label_anz">ANZ goMoney NZ Tweaks</string>
    <string name="label_semble">Semble Tweaks</string>
    <string name="label_tvnz">TVNZ OnDemand Tweaks</string>
    <string name="label_tv3now">3NOW Tweaks</string>
    <string name="label_help">Help &amp; FAQ\'s</string>
    <string name="label_main_contact">Contact Me</string>
    <string name="label_about">About</string>

    <!-- Main Activity's Settings -->
    <string name="MainPrefActivity_settings_help">Help &amp; FAQ\'s</string>
    <string name="MainPrefActivity_settings_donate">Donate</string>
    <string name="MainPrefActivity_settings_contact">Contact Me</string>
    <string name="MainPrefActivity_settings_sourceCode">Source Code</string>
    <string name="MainPrefActivity_settings_xda">XDA Thread</string>
    <string name="MainPrefActivity_settings_about">About</string>

    <!-- Main Activity's Preference Fragment -->
    <string name="MainPrefFragement_asbPrefs_title">ASB Mobile (Untested Feature)</string>
    <string name="MainPrefFragement_asbPrefs_summary">Toggle preferences that can be used to bypass root detection when adding virtual cards.</string>
    <string name="MainPrefFragement_anzPrefs_title">ANZ GoMoney NZ</string>
    <string name="MainPrefFragement_anzPrefs_summary">Toggle preferences that can be used to bypass ANZ GoMoney\'s root detection and have the ability to spoof your device to enable GoMoney Wallet (NFC Payment).</string>
    <string name="MainPrefFragement_semblePrefs_title">Semble</string>
    <string name="MainPrefFragement_semblePrefs_summary">Toggle preferences that can be used to bypass Semble\'s root detection, device spoofing and also bypass \"OS not Supported\" messages for Lollipop and above users.</string>
    <string name="MainPrefFragement_tvnzPrefs_title">TVNZ onDemand</string>
    <string name="MainPrefFragement_tvnzPrefs_summary">Toggle preferences that can be used to bypass TVNZ onDemand\'s Root Detection checks when watching a onDemand video.</string>
    <string name="MainPrefFragement_tv3nowPrefs_title">3NOW</string>
    <string name="MainPrefFragement_tv3nowPrefs_summary">Toggle preferences that can be used to bypass 3NOW\'s Root Detection checks when entering the application.</string>

    <string name="MainPrefFragement_debug_title">Debug Mode</string>
    <string name="MainPrefFragement_debug_summary">When enabled, SuperKiwi and any of the applications listed above will display logging information in logcat for troubleshooting purposes. Its recommended to use a computer when viewing the logcat as it\'s much easier to read.</string>
    <string name="MainPrefFragement_help_title">Help and FAQ\'s</string>
    <string name="MainPrefFragement_help_summary">Displays helpful information about the module, troubleshooting etc.</string>


    <!-- Contact Activity -->
    <string name="ContactActivity_contactViaTwitterButton">Follow me! Tweet Me!</string>
    <string name="ContactActivity_contactViaEmailButton">Email Me!</string>
    <string name="ContactActivity_contactViaXDAButton">Post a Message on the XDA Thread!</string>
    <string name="ContactActivity_message">Depending on the issue, I might not always be the best person to contact.\n
        \n
        If payment issues arise when using a supported banking application, contact your bank for support.
        If viewing issues or glitches arise when using 3NOW or TVNZ OnDemand, most likely contact the application provider for support.
        If the module is not working in a general sense then its best to contact me via the XDA thread or email.\n
        \n
        You can contact me using any of the methods below where you can send me feedback,
        bug reports, feature requests or to simply follow me on social media for updates.\n
        \n
        Remember to actually write an actual message when contacting me!
        You\'d be surprised how many people emailed me with no message.
    </string>

    <!-- ASB Mobile Preference Fragment -->
    <string name="ASBPrefFragment_preferences_rootDetection_title">Root Detection (Untested Feature)</string>
    <string name="ASBPrefFragment_preferences_rootDetection_summary">Enable this to avoid root detection messages for the when adding virtual cards in the ASB Mobile app. Unclear if this actually works or not, so if you use this feature please provide feedback via email or XDA.</string>

    <!-- ANZ Preference Fragment -->
    <string name="ANZPrefFragment_preferences_rootDetection_title">Root Detection</string>
    <string name="ANZPrefFragment_preferences_rootDetection_summary">Enable to bypass the various root checks found in ANZ GoMoney NZ.</string>
    <string name="ANZPrefFragment_preferences_spoofDevice_title">Spoof Device</string>
    <string name="ANZPrefFragment_preferences_spoofDevice_summary">Spoofs your device information to trick GoMoney Wallet to work. Cannot guarantee this will work with older devices.</string>
    <string name="ANZPrefFragment_preferences_spoofDeviceChooser_title">Spoof Device Selection</string>
    <string name="ANZPrefFragment_preferences_spoofDeviceChooser_summary">Pick the device you want to use when device spoofing is enabled for ANZ. <i>[Currently Selected: %1$s]</i></string>
    <string name="ANZPrefFragment_anzEnableScreenshots_title">Allow Screenshots</string>
    <string name="ANZPrefFragment_anzEnableScreenshots_summary">Allow screenshots to be taken within the ANZ GoMoney application. Do not turn on this feature unless you actually need it as it is a huge security breach. If you indeed do use this feature, make sure no sensitive information is displayed when you screenshot.</string>


    <!-- Semble's Preference Fragment -->
    <string name="SemblePrefFragment_rootDetection_title">Root Detection</string>
    <string name="SemblePrefFragment_rootDetection_summary">Enable to bypass the various root checks found in the Semble applications.</string>
    <string name="SemblePrefFragment_unofficialOSSupport_title">Unofficial Android OS Support</string>
    <string name="SemblePrefFragment_unofficialOSSupport_summary">Bypasses the \"OS not supported\" message on officially Semble-supported devices that have newer Android OS version installed which Semble was not designed to be used on.</string>
    <string name="SemblePrefFragment_spoofDevice_title">Spoof Device</string>
    <string name="SemblePrefFragment_spoofDevice_summary">Spoofs your device information which will bypass \"Device Not Supported\" messages and trick Semble services to work. Made for devices that are not on the Semble Compatibility list. Cannot guarantee this will work with older devices.</string>
    <string name="SemblePrefFragment_spoofDeviceChooser_title">Spoof Device Selection</string>
    <string name="SemblePrefFragment_spoofDeviceChooser_summary">Pick the device you want to use when device spoofing is enabled for Semble. <i>[Currently Selected: %1$s]</i></string>


    <!-- TVNZ Preference Fragment -->
    <string name="tvnzPrefFragment_rootDetection_title">Root Detection</string>
    <string name="tvnzPrefFragment_rootDetection_summary">Toggle the ability to bypass the various root checks found in the TVNZ OnDemand application.</string>
    <string name="tvnzPrefFragment_hdmiDetection_title">HDMI Detection (Untested Feature)</string>
    <string name="tvnzPrefFragment_hdmiDetection_summary">Toggle the ability to bypass HDMI detection allowing you to output OnDemand to TV screens and monitors.</string>


    <!-- TV3 NOW Preference Fragment -->
    <string name="tv3now_rootDetection_title">Root Detection</string>
    <string name="tv3now_rootDetection_summary">Enable to bypass the various root checks found in the 3NOW application.</string>


    <!-- Dialog Alert Boxes -->
    <string name="ANZPrefActivity_quit_title">Settings Changed</string>
    <string name="ANZPrefActivity_quit_message">You MUST clear all cache and data of the ANZ GoMoney application and re-login in order fro your changes to be in effect. So keep your Account Number and password on hand.</string>
    <string name="ANZPrefActivity_spoofDeviceChecked_message">In order to spoof your device you must clear all cache and data of the ANZ GoMoney application and re-login otherwise the spoofing feature will not activate. So keep your Account Number and password on hand.</string>

    <string name="AboutActivity_author_logo">PBomb Logo</string>
    <string name="AboutActivity_author_title">Author</string>
    <string name="AboutActivity_author_1"><a href="https://github.com/PBombNZ">Prashant B. (PBombNZ)</a></string>
    <string name="AboutActivity_contributer_title">Libraries Used and Contributions</string>
    <string name="AboutActivity_contributer_text_1">rovo89 - <a href="https://github.com/rovo89/">Xposed Bridge Framework</a></string>
    <string name="AboutActivity_contributer_text_2">Jake Wharton - <a href="https://github.com/JakeWharton/butterknife">ButterKnife</a></string>
    <string name="AboutActivity_contributer_text_3">Liam Cottle - <a href="https://github.com/liamcottle/TVNZ-Root-Unblocker">TVNZ-Root-Unblocker</a> (Obsolete)</string>
    <string name="AboutActivity_contributer_text_4">Andrew Sun - <a href="https://github.com/apsun/RemotePreferences">RemotePreferences</a></string>
    <string name="AboutActivity_LicenseAndCP_title">License &amp; Copyright</string>
    <string name="AboutActivity_LicenseAndCP_text">Copyright 2016 Prashant B.\n&lt;pbomb.nz@gmail.com&gt;\n\n This source code of this program is distributed under the terms of the GNU General Public License v3.</string>
    <string name="AboutActivity_disclaimer_title">Disclaimer</string>
    <string name="AboutActivity_disclaimer_message">The author and contributors of SuperKiwi as well as ANZ, Semble, TVNZ and their partners take no responsibility for any loss of data, monetary loss, damage to your device or any other consequences that arise as a result of using this program.\n\nUSE AT YOUR OWN RISK.</string>
</resources>
