<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Available Modifications">
        <CheckBoxPreference
            android:key="sembleRootDetection"
            android:title="@string/SemblePrefFragment_rootDetection_title"
            android:summary="@string/SemblePrefFragment_rootDetection_summary"
            android:defaultValue="true"
        />
        <CheckBoxPreference
            android:key="sembleSpoofDevice"
            android:title="@string/SemblePrefFragment_spoofDevice_title"
            android:summary="@string/SemblePrefFragment_spoofDevice_summary"
            android:defaultValue="false"
        />
        <CheckBoxPreference
            android:key="sembleOSSupport"
            android:title="@string/SemblePrefFragment_unofficialOSSupport_title"
            android:summary="@string/SemblePrefFragment_unofficialOSSupport_summary"
            android:defaultValue="true"
            />
    </PreferenceCategory>
</PreferenceScreen>
